--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "standard": "^10.0.3"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "nopt": "^4.0.1",
     "npmlog": "^4.1.2"
   }
